# moomoo

./: ABNORMAL_TRADING_BEHAVIOR_ANALYSIS.md  AI_TRADING_TIMER_IMPLEMENTATION.md  ALGORITHM_AUDIT_REPORT.md  ALPACA_ACCOUNT_RESOLUTION.md  ALPACA_ACCOUNT_SETUP_WALKTHROUGH.md  ALPACA_NAVIGATION_GUIDE.md  ALPACA_SETUP_GUIDE.md  ALPACA_SUCCESS_SUMMARY.md  ALPACA_TROUBLESHOOTING.md  BACKEND_ANALYSIS_REPORT.md  BANNER_REMOVAL_AND_PT_LT_INDICATORS_COMPLETE.md  BINANCE_INTEGRATION_COMPLETE.md  BROKER_RULE_ISOLATION_IMPLEMENTATION.md  CRITICAL_TRADING_SYSTEM_FIXES_COMPLETE.md  Cargo.toml  ENHANCED_TICKER_SYSTEM.md  FINAL_FIXES_COMPLETE.md  FIXED_TICKER_SYSTEM.md  HYDRATION_ERROR_COMPREHENSIVE_FIX.md  HYDRATION_ERROR_FINAL_FIX.md  HYDRATION_ERROR_FIX.md  INDIVIDUAL_BALANCE_CONTROLS_IMPLEMENTATION.md  IPCA_ML_INTEGRATION_COMPLETE.md  ML_PREDICTIONS_FIX_COMPLETE.md  MOOMOO_SETUP_GUIDE.md  PERSISTENT_AI_TRADING_IMPLEMENTATION.md  README.md  REAL_DATA_FIX_SUMMARY.md  REAL_DATA_PERSISTENCE_FIX.md  REAL_TIME_MONITORING_REPORT.md  SIMULATED_DATA_AUDIT_REPORT.md  TEST_GUIDE.md  TIMES_SQUARE_ROUND_ROBIN.md  TIMES_SQUARE_TICKER_SYSTEM.md  TRANSPARENCY_FEATURES.md  UNIFIED_AI_TRADING_CENTER_IMPLEMENTATION.md  WEBSOCKET_TIMEOUT_ANALYSIS.md  check-dashboard.sh  config.toml  test-alpaca-connection.js  (+3 more)
docs/: README.md
docs/api/: ai-integration.md  portfolio-management.md  trading-dashboard.md
src/: main.rs  vector_store.rs
src/agents/: coordinator.rs  execution.rs  intelligence.rs  learning.rs  mod.rs  risk.rs  traits.rs
src/core/: ai_thoughts.rs  config.rs  errors.rs  metrics.rs  mod.rs  system.rs  types.rs
src/execution/: api.rs  mod.rs  orders.rs  routing.rs
src/governance/: mod.rs
src/infrastructure/: mod.rs
src/intelligence/: mod.rs
src/interfaces/: mod.rs
src/risk/: mod.rs
src/utils/: mod.rs
web/: advanced-dashboard.html  ai-brain-dashboard.html  index.html  professional-dashboard.html  ultimate-dashboard.html  working-dashboard.html
web/premium-dashboard/: .env.example  .env.local.example  .env.local.template  .env.production  .env.production.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.production  LICENSE  MIGRATION_WHITEPAPER.md  ML_IMPLEMENTATION_SUMMARY.md  NEURAL_CORE_ALPHA7_WHITEPAPER.md  PRODUCTION_CHECKLIST.md  Q-A.md  QUICK_MIGRATION_GUIDE.md  README.md  WHITEPAPER.md  deploy-to-vps.sh  docker-compose.production.yml  next.config.js  next.config.production.js  package-lock.json  package.json  real-simulated-data.md  tailwind.config.js  test-navigation.html  tsconfig.json
web/premium-dashboard/prisma/: schema.prisma
web/premium-dashboard/scripts/: deploy-production.sh  toggle-pdt.js
web/premium-dashboard/src/: middleware.ts
web/premium-dashboard/src/app/: globals.css  layout.tsx  page.tsx  page.tsx.backup
web/premium-dashboard/src/app/dashboard/: page.tsx
web/premium-dashboard/src/app/login/: page.tsx
web/premium-dashboard/src/components/ai/: AIBrainDashboard.tsx  AIInsightsPanel.tsx  AIThoughtStream.tsx  AIThoughtTicker.tsx  AIThoughtsTicker.tsx  BottomNewsTicker.tsx  EducationalInsights.tsx  RealisticPerformance.tsx  RotatingTrustBanner.tsx  TimeSquareTickerSystem.tsx  TimesSquareDisplay.tsx  TrustIndicators.tsx  TruthBanner.tsx
web/premium-dashboard/src/components/auth/: LoginForm.tsx
web/premium-dashboard/src/components/charts/: AIMarketVisualization.tsx  Enhanced3DCylindricalDisplay.tsx  TradingChart.tsx
web/premium-dashboard/src/components/dashboard/: Header.tsx  MainContent.tsx  Sidebar.tsx  TradingDashboard.tsx
web/premium-dashboard/src/components/landing/: CylindricalMarketDisplay.tsx  LandingPage.tsx
web/premium-dashboard/src/components/market/: MarketDataPanel.tsx
web/premium-dashboard/src/components/ml/: AlternativeDataDashboard.tsx  EnsembleEngineDashboard.tsx  MLPredictionsDashboard.tsx  PortfolioOptimizerDashboard.tsx  RiskManagementDashboard.tsx
web/premium-dashboard/src/components/monitoring/: SystemHealthMonitor.tsx
web/premium-dashboard/src/components/portfolio/: PortfolioDashboard.tsx
web/premium-dashboard/src/hooks/: useHydrationSafe.ts
web/premium-dashboard/src/lib/: auth.ts  db.ts  demo-data.ts  error-handler.ts  secrets.ts
web/premium-dashboard/src/services/: ai-thoughts-service.ts  ai-thoughts-translator.ts  alpaca-api.ts  autonomous-trading-service.ts  binance-api.ts  broker-configs.ts  broker-trading-engine.ts  characteristics-service.ts  live-trading-service.ts  market-data-service.ts  ml-engine.ts  moomoo-api.ts  moomoo-sdk.ts  moomoo-tcp.ts  moomoo-websocket.ts  multi-broker-service.ts  pdt-manager.ts  portfolio-service.ts  technical-analysis.ts  websocket.ts
web/premium-dashboard/src/stores/: trading-store.ts
web/premium-dashboard/src/types/: ai-thoughts.ts  trading.ts
(+60 files in other folders)
