[package]
name = "autonomous_trading_system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Rust performance
tokio = { version = "1.35", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# Data processing and analysis
# polars = { version = "0.35", features = ["lazy", "temporal", "strings", "parquet"] }
ndarray = { version = "0.15", features = ["rayon"] }
ta = "0.5"
rust_decimal = { version = "1.32", features = ["serde"] }

# Enhanced AI and ML capabilities (simplified for now)
# candle-core = "0.3"
# candle-nn = "0.3"
# candle-transformers = "0.3"
tch = { version = "0.13", optional = true }
# tokenizers = "0.15"

# Advanced async and concurrency
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
tokio-tungstenite = "0.20"
async-recursion = "1.0"

# WebSocket and networking
hyper = { version = "0.14", features = ["full"] }

# Concurrency and performance
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"

# Serialization and data formats
bincode = "1.3"
# arrow = "49.0"

# Enhanced monitoring and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.21"
prometheus = "0.13"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }
redis = { version = "0.24", features = ["aio", "tokio-comp"], optional = true }

# Security and cryptography
ring = "0.17"
rustls = "0.21"
jsonwebtoken = "9.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
toml = "0.8"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"

[features]
default = []
pytorch = ["tch"]
database = ["sqlx", "redis"]

[[bin]]
name = "trading_agent"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-lto]
inherits = "release"
lto = "fat"
